--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.452.0",
     "path": "^0.12.7",
+    "pump": "^3.0.2",
     "radix-vue": "^1.9.7",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
