--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,8 +33,10 @@
     "jotai": "^2.10.3",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.4",
