--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "saleh7/proxmox-ve_php_api": "^1.0",
         "vlucas/phpdotenv": "^5.6",
-        "lcobucci/jwt": "^5.3"
+        "lcobucci/jwt": "^5.3",
+        "phpmailer/phpmailer": "^6.9"
     }
 }
